Fixes to 'critical issues'.